--- a/src/styles.css
+++ b/src/styles.css
@@ -24,12 +24,13 @@
   --info-color: #2196F3;            /* Azul info - información adicional y enlaces */
 }
 
-
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 html, body {
   overflow: hidden;
   height: 100%;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 body { font-family: Roboto, "Helvetica Neue", sans-serif; }
