--- a/src/app/features/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/pages/dashboard/dashboard.component.html
@@ -29,6 +29,118 @@
       [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
       [backgroundColor]="''"
     ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
+
+    <app-card-dashboard
+      [title]="'Título Ejemplo'"
+      [info]="'458.55'"
+      [description]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+      [backgroundColor]="''"
+    ></app-card-dashboard>
   </div>
 
   <section class="chart-humidity">
