--- a/src/app/features/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/pages/dashboard/dashboard.component.html
@@ -25,10 +25,23 @@
 
   </div>
 
-  <section class="chart-humidity">
-    <app-historical-humidity-graph></app-historical-humidity-graph>
-  </section>
+  <div class="graphics">
+    <section class="chart-humidity">
+      <app-historical-humidity-graph></app-historical-humidity-graph>
+    </section>
 
+    <section class="chart-humidity">
+      <app-historical-humidity-graph></app-historical-humidity-graph>
+    </section>
+
+    <section class="chart-humidity">
+      <app-historical-humidity-graph></app-historical-humidity-graph>
+    </section>
+
+    <section class="chart-humidity">
+      <app-historical-humidity-graph></app-historical-humidity-graph>
+    </section>
+  </div>
 
 </section>
 
