--- a/src/app/features/zone/pages/record-zone/zone-record.component.html
+++ b/src/app/features/zone/pages/record-zone/zone-record.component.html
@@ -27,7 +27,7 @@
     </button>
 
     <div class="text">
-      <p><a routerLink="/zones">View All Zones</a></p>
+      <p><a routerLink="/irrigation-zone">View Zones</a></p>
     </div>
 
   </form>
