--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,11 +6,13 @@
     </div>
     <nav class="nav-links">
       <a href="/dashboard">Dashboard</a>
-      <a href="/zone-record">Add Zone</a>
       <a href="/irrigation-zone">Irrigation Zones</a>
       <a href="/reports">Reports</a>
     </nav>
     <div class="header-icons">
+      <a href="/zone-record" class="icon">
+        <span class="material-icons">add</span>
+      </a>
       <a href="/notifications" class="icon">
         <span class="material-icons">notifications</span>
       </a>
