--- a/src/app/features/zone/pages/irrigation-zone/irrigation-zone.component.html
+++ b/src/app/features/zone/pages/irrigation-zone/irrigation-zone.component.html
@@ -1,10 +1,11 @@
 <div class="zone-container">
-  <div *ngFor="let zone of zones" class="zone-card">
+  <div *ngFor="let zone of zones"
+       class="zone-card"
+       [ngClass]="{'missing-data': !hasSprinklerOrSensor(zone.id)}">
     <h3>{{ zone.name }}</h3>
     <div class="button-container">
-      <button class="edit-btn">Editar</button>
+      <button class="edit-btn">Agregar</button>
       <button class="details-btn">Ver detalles</button>
     </div>
   </div>
 </div>
-
