--- a/src/app/features/zone/pages/irrigation-zone/irrigation-zone.component.html
+++ b/src/app/features/zone/pages/irrigation-zone/irrigation-zone.component.html
@@ -4,8 +4,54 @@
        [ngClass]="{'missing-data': !hasSprinklerOrSensor(zone.id)}">
     <h3>{{ zone.name }}</h3>
     <div class="button-container">
-      <button class="edit-btn">Agregar</button>
-      <button class="details-btn">Ver detalles</button>
+      <button class="edit-btn">Editar</button>
+      <button class="details-btn" (click)="viewDetails(zone)">Ver detalles</button>
     </div>
+  </div>
+</div>
+
+<div *ngIf="selectedZone" class="details-overlay">
+  <div class="details-panel">
+    <h2>{{ selectedZone.name }}</h2>
+
+    <!-- Sensores -->
+    <div class="card transparent-card">
+      <h3>Sensores</h3>
+      <div class="sensor-data">
+        <div *ngFor="let sensor of selectedZoneSensors" class="sensor-circle">
+          <div class="circle blue-circle"></div>
+          <p>{{ sensor.currentData }}</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Aspersores -->
+    <div class="card transparent-card">
+      <h3>Aspersores</h3>
+      <div class="sprinkler-data">
+        <div *ngFor="let sprinkler of selectedZoneSprinklers" class="sprinkler-circle">
+          <div class="circle orange-circle"></div>
+          <button [ngClass]="{'active-btn': sprinkler.state, 'inactive-btn': sprinkler.state}">
+            {{ !sprinkler.state ? 'Activado' : 'Desactivado' }}
+          </button>
+          <div class="sprinkler-info">
+            <p>{{ sprinkler.nameId }}</p>
+            <p>{{ sprinkler.connectionDate }}</p>
+            <p>{{ sprinkler.disconnectionDate }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Consumo de Agua y Consumo Total -->
+    <div class="consumption-container">
+      <div class="card transparent-card">
+        <h3>Consumo de agua</h3>
+      </div>
+      <div class="card transparent-card">
+        <h3>Consumo total</h3>
+      </div>
+    </div>
+    <button class="close-btn" (click)="closeDetails()">Cerrar</button>
   </div>
 </div>
