--- a/src/app/features/reports/reports-page/reports-page.component.css
+++ b/src/app/features/reports/reports-page/reports-page.component.css
@@ -6,9 +6,12 @@
 .reports-container h4{
   font-weight: bold;
   color: var(--text-primary-color);
-  margin: 20px 0;
   font-size: 2.5rem;
   letter-spacing: 3px;
+  background: var(--border-color);
+  width: 100%;
+  text-align: center;
+  padding: 20px;
 }
 
 .reports{
