--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div>
   <app-header></app-header>
-  <section>
+  <section class="body">
     <router-outlet></router-outlet>
   </section>
   <app-footer></app-footer>
