--- a/src/app/features/zone/pages/irrigation-zone/irrigation-zone.component.css
+++ b/src/app/features/zone/pages/irrigation-zone/irrigation-zone.component.css
@@ -1,258 +1,142 @@
-:root {
-  --primary-color: #2E7D32;
-  --primary-light-color: #66BB6A;
-  --primary-dark-color: #1B5E20;
-  --secondary-color: #FFC107;
-  --secondary-dark-color: #FFA000;
-  --accent-color: #FF7043;
-  --background-color: #F5F5F5;
-  --surface-color: #FFFFFF;
-  --border-color: #E0E0E0;
-  --text-primary-color: #212121;
-  --text-secondary-color: #757575;
-  --success-color: #4CAF50;
-  --error-color: #F44336;
-  --warning-color: #FF9800;
-  --info-color: #2196F3;
-}
 
-/* Contenedor de la cuadrícula de zonas */
 .zone-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 16px;
-  padding: 20px;
+  width: 90%;
+  margin: auto;
+  position: relative;
+}
+.zone-container h4{
+  width: 100%;
+  border-bottom: 1px solid var(--primary-color);
+  margin-top: 20px;
+  letter-spacing: 3px;
+  font-weight: bold;
+  padding-bottom: 5px;
 }
 
-/* Estilo de cada tarjeta de zona */
 .zone-card {
-  background-color: rgba(102, 187, 106, 0.8); /* Color verde claro con 80% de transparencia */
-  padding: 16px;
-  border-radius: 8px;
-  position: relative;
-  transition: transform 0.2s ease-in-out;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.zone-card.missing-data {
-  background-color: rgba(244, 67, 54, 0.8); /* Color rojo con 80% de transparencia */
+.card{
+  width: 300px;
+  height: 200px;
+  background: var(--primary-light-color);
+  border-radius: 10px;
+  display: grid;
+  place-items: center;
 }
-
-/* Efecto de escala en hover */
-.zone-card:hover {
-  transform: scale(1.02);
+.card label{
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 1.7rem;
+  letter-spacing: 2px;
+  font-weight: 500;
 }
-
-/* Ocultar botones inicialmente y mostrarlos al hacer hover en la tarjeta */
-.button-container {
+.card .options {
   display: flex;
   gap: 8px;
   margin-top: 12px;
   opacity: 0;
   transition: opacity 0.3s;
-}
+  height: 100%;
 
-.zone-card:hover .button-container {
+  button{
+    display: block;
+    height: max-content;
+  }
+}
+.card:hover .options {
   opacity: 1;
 }
 
-/* Estilos de botones */
-button {
+.card button {
   padding: 8px 12px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-weight: bold;
-  color: #fff;
 }
-
-.edit-btn {
+.card .edit-btn {
   background-color: var(--secondary-dark-color);
 }
-
-.details-btn {
+.card .details-btn {
   background-color: var(--accent-color);
 }
 
-/* Overlay con barra de desplazamiento */
-.details-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
+
+
+
+
+.modify-sensor {
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.6);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow-y: auto; /* Barra de desplazamiento vertical */
-}
-
-/* Panel de detalles */
-.details-panel {
-  background-color: var(--surface-color);
-  padding: 20px;
-  border-radius: 8px;
-  max-width: 900px;
-  width: 100%;
-  max-height: 80vh; /* Altura máxima para el panel de detalles */
-  overflow-y: auto; /* Barra de desplazamiento vertical */
-}
-
-/* Tarjetas transparentes dentro del panel de detalles */
-.transparent-card {
-  background-color: rgba(0, 150, 108, 0.2); /* Verde jade con 90% de transparencia */
-  padding: 16px;
-  margin-bottom: 16px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra ligera para resaltar */
-}
-
-/* Estilos de los círculos de sensores y aspersores */
-.sensor-data{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  margin-top: 12px;
-}
-
-
-/* Contenedor de aspersores en 4 columnas */
-.sprinkler-data {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Cuatro columnas */
-  gap: 16px;
-}
-
-/* Centrado y tamaño de los círculos */
-.circle {
-  width: 40px; /* Tamaño más grande */
-  height: 40px;
-  border-radius: 50%;
-  margin: 0 auto; /* Centrar dentro de la celda */
-}
-
-.green-circle {
-  background-color: var(--primary-light-color);
-}
-
-/* Botones de estado de aspersores */
-.active-btn {
-  background-color: var(--info-color);
-}
-
-.inactive-btn {
-  background-color: var(--error-color);
-}
-
-.sprinkler-info p {
-  margin: 2px 0;
-}
-
-/* Contenedor para tarjetas de consumo */
-.consumption-container {
-  display: flex;
-  gap: 16px;
-  justify-content: center;
-}
-
-.close-btn {
-  background-color: var(--error-color);
-  margin-top: 20px;
-  width: 100%;
-}
-/* Opciones de edición */
-.edit-options {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: var(--secondary-color);
-  border-radius: 8px;
-  padding: 20px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Sombra ligera */
-  max-width: 400px;
-  width: 90%; /* Para hacerla responsiva en pantallas pequeñas */
-  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: grid;
+  place-items: center;
+
+}
+
+.modify-container {
+  background: var(--primary-light-color);
+  padding: 50px;
   text-align: center;
-  box-sizing: border-box;
 }
 
-
-.edit-options h3 {
-  color: var(--primary-color);
+h4 {
+  margin-bottom: 40px;
 }
 
-.edit-options button {
-  margin: 10px 5px;
-  padding: 10px 20px;
-  background-color: var(--accent-color);
-  border: none;
-  border-radius: 4px;
-  color: #fff;
-  font-weight: bold;
+.forms {
+  display: flex;
+  gap: 30px;
+  align-items: flex-start;
+}
+
+.sensors, .sprinklers {
+  display: flex;
+  gap: 40px;
+}
+
+.sensors-zone p, .sprinkler-zone p {
+  color: var(--text-primary-color);
+  font-weight: 500;
+  padding: 5px 10px;
+  background: var(--info-color);
+}
+
+.sensor-form, .sprinkler-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button, .sensor-form button, .sprinkler-form button {
+  margin-top: 20px;
   cursor: pointer;
 }
 
-/* Formulario de aspersor y sensor */
-.form-container {
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 16px;
-  border-radius: 8px;
-  margin-top: 10px;
+.input-box {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
 
-.form-container label {
-  font-weight: bold;
-  display: block;
-  margin: 8px 0 4px;
-}
-
-.form-container input[type="text"],
-.form-container input[type="number"] {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid var(--border-color);
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-.form-container button[type="submit"] {
-  width: 100%;
-  padding: 10px;
-  background-color: var(--primary-color);
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  font-weight: bold;
-  margin-top: 12px;
-  cursor: pointer;
-}
-
-
-
-/* Responsive Design */
-@media (max-width: 768px) {
-  .zone-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .details-panel {
-    padding: 16px;
-  }
-
-  .sprinkler-data {
-    grid-template-columns: repeat(2, 1fr); /* Cambiar a 2 columnas en pantallas medianas */
-  }
-}
-
-@media (max-width: 480px) {
-  .zone-container {
-    grid-template-columns: 1fr;
-  }
-
-  .sprinkler-data {
-    grid-template-columns: 1fr; /* Cambiar a 1 columna en pantallas pequeñas */
-  }
+.input-box input {
+  outline: none;
+  font-size: 1rem;
+  padding: 5px 10px;
+  font-weight: 500;
+  color: var(--info-color);
 }
